--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   db:
     image: postgres
   web:
-    build: .
+    build: ./scraper
     container_name: scraper
     ports:
       - "8080:8080"
