Fixed docker-compose and added environment variables

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,26 @@
 version: "3.3"
 
 services:
-  db:
-    image: postgres
-  web:
+  api:
+    restart: always
     build: ./scraper
-    container_name: scraper
+    container_name: api
     ports:
       - "8080:8080"
-    links:
+    depends_on:
       - db
+    environment:
+      DB_NAME: postgres
+      DB_HOST: db
+      DB_USER: postgres
+      DB_PASSWORD: postgres
+      DB_PORT: 5432
+      ALLOWED_HOST: '*'
+      DEBUG: 'False'
+      SECRET_KEY: key
+  db:
+    image: postgres
+    restart: always
+    container_name: db
+    ports:
+      - "5432:5432"
